fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body {
   backdrop-filter: blur(12px);
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 ol,
